<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textProductosSeleccionados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Presupuesto_Titulo"
            android:textSize="22sp"
            android:textColor="@color/turquoise"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewProductosSeleccionados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/textProductosSeleccionados"
            android:layout_marginTop="8dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewProductosSeleccionados"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textStyle="bold"
                    android:text="@string/Presupuesto_Total"
                    android:textSize="16sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/cardViewTotal"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp">

                <Button
                    android:id="@+id/botonGuardarPresupuesto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:backgroundTint="@color/turquoise"
                    android:textStyle="bold"
                    android:text="@string/Botton_Presupuesto_guardar" />

                <Button
                    android:id="@+id/botonLimpiarPresupuesto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:text="@string/Botton_Presupuesto_borrar"
                    android:backgroundTint="@color/turquoise"
                    android:textStyle="bold"/>

            </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
